替换了部分文件的内容

--- a/销售预测/销售预测文档.md
+++ b/销售预测/销售预测文档.md
@@ -3,6 +3,8 @@
         - [ ] 集成学习
         + 
         - [ ] 本征模态分解（PyEDM）
+            &emsp;&emsp;区别于传统的傅里叶分解和小波变换的小波分解，EMD分解时自适应分解，更加贴合数据本身的规律。我们知道，在研究时间序列时，往往需要考虑序列的平稳性，时间序列的平稳性分为严平稳和宽平稳:
+            > `严平稳`：序列的所有统计属性都不会随着时间推移而产生变化
         - [ ] 使用tf.data构建数据管道
         - [ ] Dask分布系统
         - [ ] LSTM神经网络
