--- a/销售预测/销售预测文档.md
+++ b/销售预测/销售预测文档.md
@@ -12,3 +12,9 @@
         - [ ] Tensorboard解析网络结构
         - [ ] 每年对应日期的对齐！(最重要) 
         - [ ] Plotly Express学习
+        - [ ] 数据预处理
+        + 首先要尽量简化数据，对数据进行标准化处理(0,1标准化)。比如，不能直接使用价格，而应该使用价格的插值，这样才能比较客观的比较每一个输入的作用。
+
+        + 要对数据集进行特征筛选，排除哪些没有用的输入。可以先将数据转换为监督学习型数据A,B，然后计算两个序列的相关系数，值得注意的是，可以给其中一列添加offset,试着使用各个offset再次计算相关系数，以此找到使相关系数最大的offset,这就是A领先B的平均时间，也就是我们常说的周期。如果此offset小于0，说明A能很好的预测B,如果offset大于0,说明A不能很好的预测B,反而B能更好的预测A（相较使用A预测B）。
+
+        + 得到一个优秀的输入之后，开始模型的建立，建议从线性回归开始，考察得到预测值与实际值得相关系数，如果相关系数是一个合理的取值，再考虑树形算法，最后再使用神经网络以此一步步熟悉数据集，便于搭建结构更合理适用的神经网络。
